--- a/en-US/5.data-migration/11.bypass-import/2.use-load-data-statement-to-bypass-import-data.md
+++ b/en-US/5.data-migration/11.bypass-import/2.use-load-data-statement-to-bypass-import-data.md
@@ -17,7 +17,6 @@ LOAD DATA /*+ direct(need_sort,max_error) parallel(N) */ INFILE 'file_name' ...
 
 For more information about the syntax of the `LOAD DATA` statement, see [LOAD DATA](../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/59.load-data-of-mysql-mode.md).
 
-**Parameters**
 
 | Parameter | Description |
 |------|------|
@@ -108,6 +107,6 @@ For more information about the syntax of the `LOAD DATA` statement, see [LOAD DA
    3 rows in set
    ```
 
-## References
+## More information
 
 [Import data by using the LOAD DATA statement](../7.migrate-data-from-csv-file-to-oceanbase-database/2.use-the-load-command-to-load-the-csv-data-file-to-the-oceanbase-database.md)
