--- a/en-US/5.data-migration/11.bypass-import/3.use-insert-into-select-statement-to-bypass-import-data.md
+++ b/en-US/5.data-migration/11.bypass-import/3.use-insert-into-select-statement-to-bypass-import-data.md
@@ -18,7 +18,6 @@ INSERT INTO /*+ append enable_parallel_dml parallel(N) */ table_name select_sent
 
 For more information about the syntax of the `INSERT INTO` statement, see [INSERT (MySQL mode)](../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/57.insert-sql-of-mysql-mode.md) and [INSERT (Oracle mode)](../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/2.insert-of-oracle-mode.md).
 
-**Parameters**
 
 | Parameter | Description |
 |------|------|
@@ -64,7 +63,7 @@ In the note of the return result of the `EXPLAIN EXTENDED` statement, check whet
 obclient [test]> EXPLAIN EXTENDED INSERT INTO /*+ append enable_parallel_dml parallel(16) */ tbl1 SELECT t2.col1,t2.col3 FROM tbl2 t2;
 ```
 
-## References
+## More information
 
 * [Migrate data between tables](../10.use-sql-statements-migrate-data/1.data-migration-between-tables.md)
 * [View an execution plan](../../3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/9.execution-plan-of-mysql-mode/1.view-the-execution-plan-of-mysql-mode.md)
