--- a/en-US/6.manage/1.cluster-management/3.common-cluster-operations/14.single-machine-deployment-online-to-distributed.md
+++ b/en-US/6.manage/1.cluster-management/3.common-cluster-operations/14.single-machine-deployment-online-to-distributed.md
@@ -24,7 +24,7 @@ Perform the following steps separately on two servers.
 
 1. Install the RPM package for OceanBase Database. 
 
-   Example:
+   For example:
 
    ```shell
    [root@xxx /home/admin/rpm]# rpm -ivh oceanbase-4.1.0.0-100000682023020119.el7.x86_64.rpm
@@ -42,7 +42,7 @@ Perform the following steps separately on two servers.
    * An old OceanBase Database environment exists. 
    * Problems occur during the installation and deployment process of OceanBase Database and thereby cause an environmental disorder or generate files that will affect the next installation. 
 
-   Example:
+   For example:
 
    ```shell
    [root@xxx /home/admin]# rm -rf /data/1/obdemo
@@ -55,7 +55,7 @@ Perform the following steps separately on two servers.
 
    We recommend that you specify the data directory of OceanBase Database to an independent disk and link this directory to the home directory of OceanBase Database by using a soft link. 
 
-   Example:
+   For example:
 
    ```shell
    [root@xxx /home/admin]# su - admin
@@ -91,7 +91,7 @@ Perform the following steps separately on two servers.
    | `-r` | The Root Service list in the format of `ip:2882:2881`. Multiple items are separated with semicolons (;) to indicate Root Service information.  |
    | `-o` | The cluster startup parameters, which need to be specified as needed. <ul><li>`system_memory` specifies the internal reserved memory of OceanBase Database, which is `30 GB` by default. You can adjust this parameter to a smaller value in the case of insufficient memory on the server. The impact is that the memory may be insufficient during performance tests. </li><li>`datafile_size` specifies the size of the `SSTable` data file of OceanBase Database, which is determined based on the available space of `/data/1/`. You no longer need to specify the size again once specified in this step. We recommend that you specify the data file size to at least `100 GB` and reserve some spaces. <blockquote><b>Note</b></br>If `/data/1` and `/data/log1` belong to the same file system (share the same disk), ensure that the space reserved for `/data/log1` is two to four times the size of the memory. </blockquote></li><li>`config_additional_dir` specifies the redundancy directory for the parameter file. </li></ul> |
 
-   Example:
+   For example:
 
    1. Start the observer process on the node with the IP address of `10.10.10.2`. 
 
@@ -134,7 +134,7 @@ Perform the following steps separately on two servers.
    * For the `netstat -ntlp` command, if Ports `2881` and `2882` are listened to, the observer process is started. 
    * The `ps -ef|grep observer` command can return the information about the observer process. 
 
-   Example:
+   For example:
 
    ```shell
    -bash-4.2$ netstat -ntlp
@@ -196,7 +196,7 @@ Perform the following steps separately on two servers.
 
    Add the two OBServer nodes deployed in **Step 1** to `zone2` and `zone3`, respectively. 
 
-   Example:
+   For example:
 
    ```shell
    obclient [(none)]> ALTER SYSTEM ADD SERVER '10.10.10.2:2882' ZONE 'zone2';
@@ -257,15 +257,15 @@ Perform the following steps separately on two servers.
     <p>To add replicas by modifying the locality of a tenant, you must add the replicas one by one. </p>
     </main>
     
-```shell
-   obclient [(none)]> ALTER TENANT tenant_oracle001 LOCALITY='F@zone1,F@zone2';
-   Query OK, 0 rows affected
-   
-   obclient [(none)]> ALTER TENANT tenant_oracle001 LOCALITY='F@zone1,F@zone2,F@zone3';
-   Query OK, 0 rows affected
+   ```shell
+      obclient [(none)]> ALTER TENANT tenant_oracle001 LOCALITY='F@zone1,F@zone2';
+      Query OK, 0 rows affected
+      
+      obclient [(none)]> ALTER TENANT tenant_oracle001 LOCALITY='F@zone1,F@zone2,F@zone3';
+      Query OK, 0 rows affected
    ```
 
-## References
+## More information
 
 * [ALTER SYSTEM ... ZONE](../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/25.zone.md)
 * [ALTER SYSTEM ... SERVER](../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/20.SERVER.md)
