--- a/en-US/6.manage/1.cluster-management/3.common-cluster-operations/15.upgrade-guide/2.use-the-command-line-to-upgrade-the-database/1.upgrade-overview.md
+++ b/en-US/6.manage/1.cluster-management/3.common-cluster-operations/15.upgrade-guide/2.use-the-command-line-to-upgrade-the-database/1.upgrade-overview.md
@@ -58,7 +58,7 @@ Pay attention to the following impact during the upgrade of OceanBase Database.
 
 [Perform an upgrade](2.start-upgrade.md)
 
-## References
+## More information
 
 * [server_permanent_offline_time](../../../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/190.server_permanent_offline_time.md)
 * [enable_rebalance](../../../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/79.enable_rebalance.md)
