--- a/en-US/6.manage/1.cluster-management/3.common-cluster-operations/15.upgrade-guide/2.use-the-command-line-to-upgrade-the-database/2.start-upgrade.md
+++ b/en-US/6.manage/1.cluster-management/3.common-cluster-operations/15.upgrade-guide/2.use-the-command-line-to-upgrade-the-database/2.start-upgrade.md
@@ -81,7 +81,7 @@ obclient [(none)]> SELECT SVR_IP,ZONE,NAME,VALUE FROM OCEANBASE.GV$OB_PARAMETERS
 
 View the upgrade dependencies in the `oceanbase_upgrade_dep.yml` file in the `/rpm_dir/home/admin/oceanbase/etc` directory.
 
-Example:
+For example:
 
 ```shell
 [root@xxx /rpm_dir]# cd home/admin/oceanbase/etc
@@ -120,7 +120,7 @@ Example:
 
 Specify the logon information for directly connecting to the OBServer node from the sys tenant. Run the `upgrade_checker.py` script to perform a precheck. If the script is successfully executed, you can continue with the upgrade.
 
-Example:
+For example:
 
 ```shell
 [root@xxx /rpm_dir]# cd home/admin/oceanbase/etc
@@ -131,7 +131,7 @@ Example:
 
 Specify the logon information for directly connecting to the OBServer node from the sys tenant. Run the `upgrade_pre.py` script. If the script is successfully executed, you can continue with the upgrade.
 
-Example:
+For example:
 
 ```shell
 [root@xxx /rpm_dir/home/admin/oceanbase/etc]# python upgrade_pre.py -h 127.0.0.1 -P 2881 -u xxxx@sys -p******
@@ -213,7 +213,7 @@ The cluster is upgraded zone by zone. Therefore, you must perform the following 
 
 Specify the logon information for directly connecting to the OBServer node from the sys tenant. Execute the `upgrade_post.py` script to complete the major upgrade operations and related checks.
 
-Example:
+For example:
 
 ```shell
 [root@xxx /rpm_dir/home/admin/oceanbase/etc]# python upgrade_post.py -h 127.0.0.1 -P 2881 -u xxxx@sys -p******
@@ -222,7 +222,7 @@ Example:
 This script completes the following major upgrade operations and related checks:
 
 1. Perform a cluster-level health check.
-2. `alter system end rolling upgrade`
+2. `alter system end rolling upgrade`.
 3. Perform the BEGIN UPGRADE operation.
 4. Correct system variables by tenant.
 5. Correct system tables by tenant.
@@ -272,7 +272,7 @@ Maybe you want to run cmd like that:
 
 Restore the parameters backed up in Step 1 to the original values.
 
-Example:
+For example:
 
 ```sql
 ALTER SYSTEM SET server_permanent_offline_time = xxx;
@@ -280,11 +280,11 @@ ALTER SYSTEM SET enable_rebalance = xxx;
 ALTER SYSTEM SET enable_rereplication = xxx;
 ```
 
-## Subsequent operations
+## What to do next
 
 Verify whether the upgrade is completed. For more information, see [Check upgrade results](3.check-after-upgrade.md).
 
-## References
+## More information
 
 * [Start or stop a zone](../../../../../7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/4.manage-zones-in-a-cluster/4.start-or-stop-a-zone.md)
 * [ALTER SYSTEM PARAMETER](../../../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/9.alter-system-parameter-of-oracle-mode.md)
