--- a/en-US/6.manage/1.cluster-management/3.common-cluster-operations/15.upgrade-guide/2.use-the-command-line-to-upgrade-the-database/3.check-after-upgrade.md
+++ b/en-US/6.manage/1.cluster-management/3.common-cluster-operations/15.upgrade-guide/2.use-the-command-line-to-upgrade-the-database/3.check-after-upgrade.md
@@ -53,6 +53,6 @@ After a cluster upgrade, you must check the cluster status to make sure that the
    9 rows in set
    ```
 
-## References
+## More information
 
 [Overview](../../../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)
