--- a/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/7.recover-the-standby-tenant.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/7.recover-the-standby-tenant.md
@@ -49,7 +49,7 @@
 
 ## 备租户触发自身日志回放
 
-备租户技能发起自身的日志回放。
+备租户也能发起自身的日志回放。
 
 1. 用户租户的租户管理员登录数据库。
 
@@ -62,13 +62,13 @@
 
    语句如下：
 
-   * 回放到日志到指定的时间戳，且包含该时间戳位点。
+   * 回放日志到指定的时间戳，且包含该时间戳位点。
   
      ```shell
      obclient [(none)]> ALTER SYSTEM RECOVER STANDBY UNTIL TIME='timestamp';
      ```
 
-   * 回放到日志到指定的 SCN，且包含该 SCN 位点。
+   * 回放日志到指定的 SCN，且包含该 SCN 位点。
 
      ```shell
      obclient [(none)]> ALTER SYSTEM RECOVER STANDBY UNTIL SCN=scn;
