--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/5.query-rewrite/2.rule-based-query-rewriting.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/5.query-rewrite/2.rule-based-query-rewriting.md
@@ -444,7 +444,7 @@ obclient> (SELECT c1,c2 FROM t1 LIMIT 5) UNION ALL (SELECT c3,c4 FROM t2 limit 5
   obclient> CREATE TABLE t2(c1 INT, c2 INT, c3 INT, PRIMARY KEY(c1, c2));
   Query OK, 0 rows affected 
   
-  obclient> SELECT DISTINCT c1, c2, c3 FROM t2;
+  obclient> SELECT c1, c2, c3 FROM t2;
   <==>
   obclient> SELECT c1, c2 c3 FROM t2;
   
