--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/11.connect-to-the-oceanbase-database-through-springjpa-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/11.connect-to-the-oceanbase-database-through-springjpa-of-mysql-mode.md
@@ -165,7 +165,7 @@ useUnicode=true&characterEncoding=utf-8
 spring.datasource.url=jdbc:mysql://10.100.xxx.xxx:18815/test
 spring.datasource.username=admin@oracle
 spring.datasource.password=******
-spring.datasource.driver-class-name=com.alipay.oceanbase.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
